--- a/src/DTL/CoolAndBedBundle/Resources/views/PageParts/GalleryPagePart/view.html.twig
+++ b/src/DTL/CoolAndBedBundle/Resources/views/PageParts/GalleryPagePart/view.html.twig
@@ -2,7 +2,7 @@
 {% for i, image in resource.folder.media  %}
     <div class="col-xs-6 col-md-3">
         <a href="{{ asset(image.url) }}" class="thumbnail">
-            <img src="{{ asset(image.url) }}" />
+            <img src="{{ asset(image.url) | imagine_filter(asset(image.url), runtimeConfig) }}" />
         </a>
     </div>
 {% endfor %}
