--- a/src/DTL/CoolAndBedBundle/Resources/views/Pages/Gallery/view.html.twig
+++ b/src/DTL/CoolAndBedBundle/Resources/views/Pages/Gallery/view.html.twig
@@ -1,10 +1,10 @@
 <div class="container">
-    <div class="row row--padded-large">
+    <div class="row">
         <div class="col-md-12 col--padded">
             {{ render_pageparts(page, 'main') }}
         </div>
     </div>
-    <div class="row row--padded-large">
+    <div class="row">
         <div class="col-md-12 col--padded">
             {{ render_pageparts(page, 'gallery') }}
         </div>
