--- a/src/DTL/CoolAndBedBundle/Resources/public/css/main.css
+++ b/src/DTL/CoolAndBedBundle/Resources/public/css/main.css
@@ -84,12 +84,20 @@ footer ul li a {
     font-family: sans-serif;
 }
 
+#headerCont {
+    z-index: 100;
+}
+
 .main-nav ul.nav li a {
     color: #57c3ec;
 }
 
 .main-nav ul.nav li a:hover {
     color: #b4d73a;
+}
+
+.main-nav ul.nav li.active a {
+    color: red;
 }
 
 .main-nav ul.nav li div.subtitle-link {
